# asterism

./: .gitignore  Cargo.toml  LICENSE  README.org  notes.md
asterism/: Cargo.toml
asterism/src/: #animation.rs#  .#animation.rs  animation.rs  collision.rs  control.rs  data.rs  entity_state.rs  graph.rs  lib.rs  linking.rs  physics.rs  resources.rs  tables.rs
prototypes/: README.md
prototypes/Maze-minigame/: Cargo.toml
prototypes/Maze-minigame/src/: main.rs
prototypes/air_hockey/: Cargo.toml~
prototypes/air_hockey/src/: main.rs  main.rs~
prototypes/all-paddles-variants/: Cargo.toml
prototypes/all-paddles-variants/src/: main.rs
prototypes/apple-catching/: Cargo.toml
prototypes/apple-catching/src/: #main.rs#  .#main.rs  apple_tree_sprite.json  main.rs
prototypes/archer_game/src/: level1.rs  main.rs  make_square.rs  texture.rs  vector.rs
prototypes/bitsy/: Cargo.toml
prototypes/bitsy/src/: collision.rs  entities.rs  events.rs  lib.rs  syntheses.rs  tables.rs  types.rs
prototypes/boxsy/src/: collision.rs  events.rs  lib.rs  types.rs
prototypes/breakout/: Cargo.toml
prototypes/breakout-game/: Cargo.toml
prototypes/breakout-game/src/: main.rs
prototypes/breakout/src/: main.rs
prototypes/clowder/: Cargo.toml
prototypes/clowder/src/: #clowder_sprite.json#  #main.rs#  clowder_sheet_v1.json  clowder_sprite copy.json  clowder_sprite.json  clowder_sprite_v2.json  main.rs
prototypes/jumper/: Cargo.toml
prototypes/jumper/src/: collision.rs  control.rs  entity_state.rs  main.rs  physics.rs
prototypes/maze-macroquad/: Cargo.toml
prototypes/maze-macroquad/src/: main.rs
prototypes/maze-minigame/: Cargo.toml
prototypes/maze-minigame/src/: main.rs
prototypes/new-events-test/: Cargo.toml
prototypes/new-events-test/src/: main.rs
prototypes/old/air_hockey/: Cargo.toml
prototypes/old/archer_game/: Cargo.toml
prototypes/old/archer_game/src/: level1.rs  shader.vert
prototypes/old/jumper/: Cargo.toml
prototypes/old/jumper/src/: main.rs
prototypes/old/maze-minigame/src/: main.rs
prototypes/old/omnipaddles/src/: data.rs  ids.rs
prototypes/old/paddle-ball-mania/src/: main.rs
prototypes/old/paddles-macroquad/: Cargo.toml
prototypes/old/paddles/src/: main.rs
prototypes/old/trick-paddle/: Cargo.toml
prototypes/old/trick-paddle/src/: main.rs
prototypes/old/yarn/src/: main.rs
prototypes/omnipaddles/: Cargo.toml
prototypes/omnipaddles/src/: data.rs  game_data.rs  ids.rs  main.rs
prototypes/paddle-ball-mania/: Cargo.toml
prototypes/paddle-ball-mania/src/: main.rs
prototypes/paddles/: Cargo.toml
prototypes/paddles-bevy/: Cargo.toml
prototypes/paddles-bevy/.cargo/: config.toml
prototypes/paddles-bevy/src/: main.rs
prototypes/paddles-engine/: Cargo.toml
prototypes/paddles-engine/src/: entities.rs  events  events.rs  lib.rs  predicates.rs  syntheses.rs  tables.rs  types.rs
prototypes/paddles-macroquad/: Cargo.toml
prototypes/paddles-macroquad/src/: main.rs
prototypes/paddles/src/: main.rs
prototypes/pinball/: Cargo.toml
prototypes/pinball/src/: main.rs
prototypes/quest/: Cargo.toml
prototypes/quest/src/: ecs.rs  example.rs  main.rs  main2.rs  make_square.rs  rendering_logics.rs  shader.frag  shader.vert  story.rs  texture.rs  vector.rs
prototypes/quest/textures/: texture.xcf
prototypes/trick-ball/: Cargo.toml
prototypes/trick-ball/src/: main.rs
prototypes/trick-paddle/: Cargo.toml
prototypes/trick-paddle/src/: main.rs
prototypes/wall-breaker/: Cargo.toml
prototypes/wall-breaker/src/: main.rs
prototypes/yarn/: Cargo.toml  text
prototypes/yarn-engine/: Cargo.toml
prototypes/yarn-engine/src/: lib.rs
prototypes/yarn/src/: main.rs  text
src/: control.rs  entity_state.rs  lib.rs  physics.rs
