[workspace]

members = [
    "prototypes/archer_game",
    "prototypes/jumper",
    "prototypes/maze-minigame",
    "prototypes/paddles",
    "prototypes/quest",
    "prototypes/yarn",
    "prototypes/paddles-macroquad",
    "prototypes/air_hockey",
    "prototypes/breakout",
    "prototypes/apple-catching",
    "prototypes/maze-macroquad",
    "prototypes/trick-ball",
    "prototypes/trick-paddle",
    "prototypes/wall-breaker",
    "prototypes/paddle-ball-mania"
]

