[package]
name = "asterism"
description = "operationalizing operational logics one constellation at a time"
version = "0.1.0"
authors = ["Cynthia Li", "Julie Ye", "Joe Osborn"]
edition = "2018"

[dependencies]
ultraviolet = "0.4.6"
winit = "0.22.0"
winit_input_helper = "0.7.0"
macroquad = { git = "https://github.com/not-fl3/macroquad", rev = "b3fc6aa8f9a66e32a401b00864af8c99fbfc26e2" }
glam = "0.10"

# bevy takes a long time to build and we're not actively using it currently, so making this a feature
bevy_input = { version = "0.4.0", optional = true }
json = "*"
image = "0.22"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[features]
default = []
asterism-bevy = ["bevy_input"]
