[package]
name = "asterism"
description = "operationalizing operational logics one constellation at a time"
version = "0.1.0"
authors = ["Cynthia Li", "Julie Ye", "Joe Osborn"]
edition = "2018"

[dependencies]
macroquad = "0.3.4"

# Bevy takes a long time to build and we're not actively using it currently, so making this a feature
bevy_input = { version = "0.4.0", optional = true }

# We're not currently using winit either
winit = { version = "0.24.0", optional = true }
winit_input_helper = { version = "0.9.0", optional = true }

[features]
bevy-engine = ["bevy_input"]
winit-render = ["winit", "winit_input_helper"]
