[package]
name = "maze-minigame"
version = "0.1.0"
authors = ["Julie"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = { version = "0.4.8", features = [ "release_max_level_warn" ] }
pixels = "0.0.4"
winit = "0.22.0"
winit_input_helper = "0.6.0"