[package]
name = "apple-catching"
version = "0.1.0"
authors = ["cynthia <cxla2018@mymail.pomona.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asterism = { path = "../../asterism" }
macroquad = "0.3.4"
json = "*"
image = "0.22"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

