[package]
name = "clowder"
version = "0.1.0"
authors = ["Joseph C. Osborn <jcoa2018@pomona.edu>", "Cynthia Li <cxla2018@mymail.pomona.edu>", "Katiana Wieser <kmwa2020@mymail.pomona.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.0.4"
winit = "0.22.0"
winit_input_helper = "0.7.0"
ultraviolet = "0.4.6"
asterism = { path = "../../asterism" }
