[package]
name = "maze-macroquad"
version = "0.1.0"
authors = ["cynthia <cxla2018@mymail.pomona.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asterism = { path = "../../asterism" }
macroquad = { git = "https://github.com/not-fl3/macroquad", rev = "31cff5d89ed17a6c83f39cf6568348dab25145dc" }
